--- a/kalenteri/src/app/app.component.html
+++ b/kalenteri/src/app/app.component.html
@@ -1,26 +1,1 @@
-<header>
-  <nav>
-    <h1>Lintukoto</h1>
-    <ul class="navUl">
-      <li class="headerNavLi"><a href="#" class="nav-a">Kalenteri</a></li>
-      <li class="headerNavLi"><a href="#" class="nav-a">Kurssit</a></li>
-      <li class="headerNavLi"><a href="#" class="nav-a">Asetukset</a></li>
-    </ul>
-  </nav>
-</header>
-
-<div id="schedule">
-  <ejs-schedule
-    width="100%"
-    height="550px"
-    [selectedDate]="selectedDate"
-    [views]="views"
-    [eventSettings]="eventSettings"
-    [showHeaderBar]="showHeaderBar"
-  >
-  </ejs-schedule>
-</div>
-<h2>Tehtävät</h2>
-<div class="outer-div">
-  <div class="blue-div"></div>
-</div>
+<app-kalenteri></app-kalenteri>
