--- a/kalenteri/src/app/kalenteri/kalenteri.component.css
+++ b/kalenteri/src/app/kalenteri/kalenteri.component.css
@@ -1,23 +1,14 @@
-.navUl {
-  list-style: none;
-  display: inline-block;
-}
-.headerNavLi {
-  display: inline-flex;
-  position: inherit;
-  margin-right: 2em;
-}
-.nav-a {
-  text-decoration: none;
-}
 .outer-div {
   align-content: center;
   width: 100vw;
 }
 .blue-div {
-  background-color: #cc88;
-  width: 90%;
-  height: 200px;
-  align-content: center;
-  margin-left: 2em;
+  background-color: #d4e4ff;
+  max-width: 90%;
+  height: 150px;
+  margin-bottom: 3em;
+}
+h2 {
+  margin-left: 10px;
+  margin-top: 10px;
 }
