--- a/kalenteri/src/app/kalenteri/kalenteri.component.html
+++ b/kalenteri/src/app/kalenteri/kalenteri.component.html
@@ -1,26 +1,16 @@
-<header>
-  <nav>
-    <h1>Lintukoto</h1>
-    <ul class="navUl">
-      <li class="headerNavLi"><a href="#" class="nav-a">Kalenteri</a></li>
-      <li class="headerNavLi"><a href="#" class="nav-a">Kurssit</a></li>
-      <li class="headerNavLi"><a href="#" class="nav-a">Asetukset</a></li>
-    </ul>
-  </nav>
-</header>
-
 <div id="schedule">
   <ejs-schedule
     width="100%"
-    height="550px"
+    height="450px"
     [selectedDate]="selectedDate"
     [views]="views"
     [eventSettings]="eventSettings"
     [showHeaderBar]="showHeaderBar"
+    [firstDayOfWeek]="weekFirstDay"
   >
   </ejs-schedule>
 </div>
 <h2>Tehtävät</h2>
-<div class="outer-div">
-  <div class="blue-div"></div>
+<div class="row justify-content-md-center">
+  <div class="col-sm-12 align-self-center blue-div"></div>
 </div>
