--- a/kalenteri/src/app/kalenteri/kalenteri.component.html
+++ b/kalenteri/src/app/kalenteri/kalenteri.component.html
@@ -7,7 +7,12 @@
     [eventSettings]="eventSettings"
     [showHeaderBar]="showHeaderBar"
     [firstDayOfWeek]="weekFirstDay"
+    locale="fi"
   >
+    <e-header-rows>
+      <e-header-row option="Month"></e-header-row>
+      <e-header-row option="Date"></e-header-row>
+    </e-header-rows>
   </ejs-schedule>
 </div>
 <h2>Tehtävät</h2>
