--- a/kalenteri/src/app/kalenteri/kalenteri.component.html
+++ b/kalenteri/src/app/kalenteri/kalenteri.component.html
@@ -23,6 +23,7 @@
 <div class="row justify-content-md-center">
   <div class="col-sm-12 align-self-center blue-div">
     <ejs-treeview
+      #treeObj
       [fields]="field"
       allowDragAndDrop="true"
       (nodeDragStop)="onTreeDragStop($event)"
