Lisätty tehtäville grid-komponentti versio 1

--- a/kalenteri/src/app/kalenteri/kalenteri.component.html
+++ b/kalenteri/src/app/kalenteri/kalenteri.component.html
@@ -13,6 +13,8 @@
     (dragStart)="onDragStart($event)"
     (resizeStart)="onResizeStart($event)"
     showWeekNumber="true"
+    (renderCell)="onRenderCell($event)"
+    [eventSettings]="eventSettings"
   >
     <e-header-rows>
       <e-header-row option="Month"></e-header-row>
@@ -23,12 +25,35 @@
 <h2>Tehtävät</h2>
 <div class="row justify-content-md-center">
   <div class="col-sm-12 align-self-center blue-div">
-    <ejs-treeview
-      #treeObj
-      [fields]="field"
-      allowDragAndDrop="true"
-      (nodeDragStop)="onTreeDragStop($event)"
+    <ejs-grid
+      id="Grid"
+      #gridObj
+      [dataSource]="gridDS"
+      width="300px"
+      [allowSelection]="true"
+      [allowRowDragAndDrop]="true"
+      [editSettings]="editSettings"
+      [rowDropSettings]="srcDropOptions"
+      (rowDrop)="onDragStop($event)"
+      (rowDrag)="onRowDrag($event)"
     >
-    </ejs-treeview>
+      <e-columns>
+        <!--
+          <e-column
+          field="Id"
+          isPrimaryKey="primaryKeyVal"
+          headerText="ID"
+          width="30"
+          textAlign="Right"
+        ></e-column>
+        -->
+        <e-column field="Name" headerText="Opintojakso" width="100"></e-column>
+        <e-column
+          field="Description"
+          headerText="Tehtävä"
+          width="670"
+        ></e-column>
+      </e-columns>
+    </ejs-grid>
   </div>
 </div>
