Lisätty asetukset-sivun pohja

--- a/kalenteri/src/app/navbar/navbar.component.html
+++ b/kalenteri/src/app/navbar/navbar.component.html
@@ -34,7 +34,7 @@
         >
         <a
           class="nav-item nav-link white"
-          routerLink="#"
+          routerLink="/asetukset"
           routerLinkActive="router-link-active"
           >Asetukset</a
         >
