--- a/kalenteri/src/app/kalenteri/kalenteri.component.html
+++ b/kalenteri/src/app/kalenteri/kalenteri.component.html
@@ -1,34 +1,34 @@
 <div id="schedule">
-  <ejs-schedule
-    #scheduleObj
-    width="100%"
-    locale="fi"
-    height="450px"
-    [selectedDate]="selectedDate"
-    [views]="views"
-    [eventSettings]="eventObject"
-    [showHeaderBar]="showHeaderBar"
-    [firstDayOfWeek]="weekFirstDay"
-    locale="fi"
-    allowDragAndDrop="true"
-    (dragStart)="onDragStart($event)"
-    (resizeStart)="onResizeStart($event)"
-  >
-    <e-header-rows>
-      <e-header-row option="Month"></e-header-row>
-      <e-header-row option="Date"></e-header-row>
-    </e-header-rows>
-  </ejs-schedule>
-</div>
-<h2>Tehtävät</h2>
-<div class="row justify-content-md-center">
-  <div class="col-sm-12 align-self-center blue-div">
-    <ejs-treeview
-      #treeObj
-      [fields]="field"
+    <ejs-schedule
+      #scheduleObj
+      width="100%"
+      locale="fi"
+      height="450px"
+      [selectedDate]="selectedDate"
+      [views]="views"
+      [eventSettings]="eventObject"
+      [showHeaderBar]="showHeaderBar"
+      [firstDayOfWeek]="weekFirstDay"
       allowDragAndDrop="true"
-      (nodeDragStop)="onTreeDragStop($event)"
+      (dragStart)="onDragStart($event)"
+      (resizeStart)="onResizeStart($event)"
+      showWeekNumber="true"
     >
-    </ejs-treeview>
+      <e-header-rows>
+        <e-header-row option="Month"></e-header-row>
+        <e-header-row option="Date"></e-header-row>
+      </e-header-rows>
+    </ejs-schedule>
   </div>
-</div>
+  <h2>Tehtävät</h2>
+  <div class="row justify-content-md-center">
+    <div class="col-sm-12 align-self-center blue-div">
+      <ejs-treeview
+        #treeObj
+        [fields]="field"
+        allowDragAndDrop="true"
+        (nodeDragStop)="onTreeDragStop($event)"
+      >
+      </ejs-treeview>
+    </div>
+  </div>
