--- a/Lintukoto-sovellus/kalenteri/src/app/modal/modal.component.html
+++ b/Lintukoto-sovellus/kalenteri/src/app/modal/modal.component.html
@@ -47,3 +47,40 @@
     </div>
   </div>
 </div>
+
+<!-- The Modal -->
+<div class="modal fade" id="myModal2">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Muistiinpano</h4>
+        <button type="button" class="close" (click)="hideModal2()">
+          &times;
+        </button>
+      </div>
+
+      <!-- Modal 2 body -->
+      <div class="modal-body">
+        <p>{{ muistiinpano }}</p>
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" (click)="hideModal2()">
+          Sulje
+        </button>
+
+        <!-- this button is hidden, used to close from typescript -->
+        <button
+          type="button"
+          id="close-modal2"
+          data-dismiss="modal"
+          style="display: none"
+        >
+          Close
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
