--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -11,29 +11,69 @@
     <h1>Asetukset</h1>
     <h2>Opintojen tiedot</h2>
     <!--Opintojen aloitus päivämäärä-->
-    <div class = "form-group">
-        <label for = "aloitusPaiva">Opintojen aloituspäivä</label>
-        <input id = "aloitusPaiva" name = "aloitusPaiva"  type = "date" class = "form-control">
+    <div class = "asetus-kyselyt">
+        <label for = "aloitusPaiva">Opintojen aloituspäivä</label><br />
+        <input id = "aloitusPaiva" name = "aloitusPaiva"  type = "date" class = "asetus-kohta"><br />
 
     <!--Opintojen laajuus opintopisteinä-->
-        <label for = "kokonaisOp">Opintojen laajuus opintopisteitä</label>
-        <input id = "kokonaisOp" name = "kokonaisOp"  type = "number" class = "form-control">
+        <label for = "kokonaisOp">Opintojen laajuus opintopisteitä</label><br />
+        <input id = "kokonaisOp" name = "kokonaisOp"  type = "number" min="0" class = "asetus-kohta"><br />
 
     <!--Ryhmätunnus-->
-        <label for = "ryhmatunnus">Ryhmätunnus</label>
-        <input id = "ryhmatunnus" name = "ryhmatunnus"  type = "text" class = "form-control">
+        <label for = "ryhmatunnus">Ryhmätunnus</label><br />
+        <input id = "ryhmatunnus" name = "ryhmatunnus"  type = "text" class = "asetus-kohta"><br />
 
     <!--Kiinnostus aloitusryhmän yhteisiin opiskelutuokioihin-->
         <label for="yhteisetTuokiot">Olen kiinnostunut osallistumaan mahdollisiin ryhmäni opiskelutuokioihin</label><br /> 
-        <input type="checkbox" name="yhteisetTuokiot" formControlName =yhteisetTuokiot> Kyllä<br />
+        <input class = "asetus-kohta" type="checkbox" name="yhteisetTuokiot" formControlName =yhteisetTuokiot> Kyllä<br />
     </div>
 
     <h2>Sovelluksen asetukset</h2>
-    <div class = "form-group">
-        <p>Tähän valikot siitä näkyvätkö pöllöt vai eivät, henkipöllön herkkyys sekä tiedot onko aamuihminen vai ei.</p>
+    <div class = "asetus-kyselyt">
+    <!--Näkyvätkö pöllöt vai ei-->
+    <p>Haluan nähdä pöllöt sovelluksessani:</p>
+        <label class="kytkin">
+          <input type="checkbox">
+          <span class="slider round"></span>
+        </label><br />
 
-        <button type="submit">Tallenna</button>
-    </div>
 
+    <p>Mistä teemoista haluan henkipöllön kertovan minulle: </p>
+    <!--Henkipöllön herkkyys-->
+    <label class="henkipolloherkkyys">Opinnot
+      <input type="checkbox" checked="checked">
+      <span class="neliomerkki"></span>
+    </label><br />
+    
+    <label class="henkipolloherkkyys">Elämänhallinta
+      <input type="checkbox" checked="checked">
+      <span class="neliomerkki"></span>
+    </label><br />
+    
+    <label class="henkipolloherkkyys">Valistus
+      <input type="checkbox" checked="checked">
+      <span class="neliomerkki"></span>
+    </label><br />
+
+    
+    <!--Onko opiskelijalle väliä mihin aikaan päivää henkipöllö ehdottelee opiskeluaikaa-->
+    <p>Minulle paras aika opiskella on: </p>
+    <label class="opiskeluajankohta">Aamu
+      <input type="checkbox">
+      <span class="ympyramerkki"></span>
+    </label>
+        
+    <label class="opiskeluajankohta">Ilta
+      <input type="checkbox">
+      <span class="ympyramerkki"></span>
+    </label>
+        
+    <label class="opiskeluajankohta">Ei väliä
+      <input type="checkbox" checked="checked">
+      <span class="ympyramerkki"></span>
+    </label><br />
+
+    <button class="tallennusnappi" type="submit">Tallenna</button>
+  </div>
   </body>
 </html>
