CSS-tiedostoa tiivistetty

--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -7,6 +7,7 @@
     <title>{{ title }}</title>
   </head>
 
+  
   <body>
     <h1>Asetukset</h1>
     <h2>Opintojen tiedot</h2>
@@ -55,21 +56,21 @@
       <span class="neliomerkki"></span>
     </label><br />
 
-    
+
     <!--Onko opiskelijalle väliä mihin aikaan päivää henkipöllö ehdottelee opiskeluaikaa-->
     <p>Minulle paras aika opiskella on: </p>
     <label class="opiskeluajankohta">Aamu
-      <input type="checkbox">
+      <input type="radio">
       <span class="ympyramerkki"></span>
     </label>
         
     <label class="opiskeluajankohta">Ilta
-      <input type="checkbox">
+      <input type="radio">
       <span class="ympyramerkki"></span>
     </label>
         
     <label class="opiskeluajankohta">Ei väliä
-      <input type="checkbox" checked="checked">
+      <input type="radio" checked="checked">
       <span class="ympyramerkki"></span>
     </label><br />
 
