--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -8,5 +8,23 @@
   </head>
   <body>
     <h1>Aktiiviset kurssit</h1>
+    <ul>
+      <li *ngFor="let kurssi of kurssit" id="kurssilista">
+        <img src="{{ kurssi.kuva }}" id="pollo" />
+        <h5>{{ kurssi.nimi }}</h5>
+        <button
+          type="button"
+          class="btn btn-primary"
+          data-toggle="modal"
+          data-target="#myModal"
+        >
+          Lisää muistiinpano
+        </button>
+        <a data-toggle="modal" data-target="#myModal2" id="muistiinpano-linkki">
+          {{ kurssi.muistiinpanoTag }}</a
+        >
+        <app-modal [muistiinpano]="muistiinpano"></app-modal>
+      </li>
+    </ul>
   </body>
 </html>
