--- a/Lintukoto-sovellus/src/app/kalenteri/kalenteri.component.css
+++ b/Lintukoto-sovellus/src/app/kalenteri/kalenteri.component.css
@@ -17,11 +17,15 @@ h2 {
   box-sizing: border-box;
   width: 120em;
 }
+/*
+.e-gridheader .e-table {
+  display: none;
+}
+*/
 
 .e-toolbar .e-toolbar-items {
   background: #e4e4ff;
 }
-
 .e-hide {
   display: none;
 }
