--- a/Lintukoto-sovellus/src/app/navbar/navbar.component.html
+++ b/Lintukoto-sovellus/src/app/navbar/navbar.component.html
@@ -11,6 +11,8 @@
       aria-label="Toggle navigation"
     >
       <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
