--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
@@ -7,6 +7,12 @@
     <title>{{ title }}</title>
   </head>
   <body>
-    <h1>Suoritetut kurssit</h1>
+    <h1>Aktiiviset kurssit</h1>
+    <ul>
+      <li *ngFor="let kurssi of kurssit" id="kurssilista">
+        <img src="{{ kurssi.kuva }}" id="pollo" />
+        {{ kurssi.nimi }}
+      </li>
+    </ul>
   </body>
 </html>
