--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -2,146 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <title>{{ title }}</title>
   </head>
 
   
   <body>
     <h1>Asetukset</h1>
-    <form (ngSubmit) = "onSubmit()" #form1 ="ngForm">
-
-      <div class = "asetuksetLomake">
+    <!--Asetuksien lomake alkaa tästä-->
+    <form (ngSubmit) = "onSubmit(asetuslomake.value)" #form1 ="ngForm">
+      <div class = "form-group">
         <label for = "aloituspaiva">Opintojen aloituspäivä</label><br />
         <input type="date" [(ngModel)]= "kayttaja.aloituspaiva" class= "form-control" >
       </div>
 
-      <div class = "asetuksetLomake">
+      <div class = "form-group">
         <label for = "ryhmatunnus">Ryhmätunnus</label><br />
         <input type="text" [(ngModel)]= "kayttaja.ryhmatunnus" class= "form-control" >
       </div>
 
-      <div class = "asetuksetLomake">
+      <div class = "form-group">
         <label for = "kokonaisOp">Koulutusohjelman opintopisteiden kokonaismäärä</label><br />
         <input type="number" [(ngModel)]= "kayttaja.kokonaisOp" class= "form-control" >
       </div>
 
-      <div class = "asetuksetLomakeMerkit">
-        <label for = "yhteisetTuokiot">Olen kiinnostunut osallistumaan mahdollisiin ryhmäni opiskelutuokioihin</label><br />
-        <input type="checkbox" [(ngModel)]= "kayttaja.yhteisetTuokiot" class= "form-control" > Kyllä<br />
+    <!--checkboxit tästä eteenpäin-->
+      <div class = "form-check">
+        <label class="form-check-label" for = "yhteisetTuokiot">Olen kiinnostunut osallistumaan mahdollisiin ryhmäni opiskelutuokioihin</label><br />
+        <input type="checkbox" [(ngModel)]= "kayttaja.yhteisetTuokiot" class= "form-check-input" > Kyllä<br />
       </div>
 
-      <div class = "asetuksetLomakeMerkit">
-        <label for = "pollojenNakyminen">Haluan nähdä pöllöt sovelluksessani:</label><br />
-        <input type="checkbox" [(ngModel)]= "kayttaja.pollojenNakyminen" checked="checked" class= "form-control" > Kyllä<br />
+      <div class = "form-check">
+        <label class="form-check-label" for = "pollojenNakyminen">Haluan nähdä pöllöt sovelluksessani:</label><br />
+        <input type="checkbox" [(ngModel)]= "kayttaja.pollojenNakyminen" checked="checked" class= "form-check-input" > Kyllä<br />
       </div>
 
-      <div class = "asetuksetLomakeMerkit">
-          <label for = "henkipollonAsetukset">Näistä teemoista haluan henkipöllön kertovan minulle:</label><br />
-          <input type="checkbox" [(ngModel)]= "kayttaja.henkipolloOpinnot" checked="checked" class= "form-control" > Opinnot<br />
-          <input type="checkbox" [(ngModel)]= "kayttaja.henkipolloElama" checked="checked" class= "form-control" > Elämänhallinta<br />
-          <input type="checkbox" [(ngModel)]= "kayttaja.henkipolloValistus" checked="checked" class= "form-control" > Valistus<br />
+      <div class = "form-check">
+          <label class="form-check-label" for = "henkipollonAsetukset">Näistä teemoista haluan henkipöllön kertovan minulle:</label><br />
+          <input type="checkbox" [(ngModel)]= "kayttaja.henkipolloOpinnot" checked="checked" class= "form-check-input" > Opinnot<br />
+          <input type="checkbox" [(ngModel)]= "kayttaja.henkipolloElama" checked="checked" class= "form-check-input" > Elämänhallinta<br />
+          <input type="checkbox" [(ngModel)]= "kayttaja.henkipolloValistus" checked="checked" class= "form-check-input" > Valistus<br />
       </div>
 
-      <div class = "asetuksetLomakeMerkit">
-          <label for = "opiskeluajankohta">Opiskelen tehokkaimmin tähän aikaan päivästä:</label><br />
-          <input type="radio" [(ngModel)]= "kayttaja.aamupaiva" class= "form-control" > Aamupäivä<br />
-          <input type="radio" [(ngModel)]= "kayttaja.iltapaiva" class= "form-control" > Iltapäivä<br />
-          <input type="radio" [(ngModel)]= "kayttaja.milloinVain" checked="checked" class= "form-control" > Mihin aikaan vain<br />
+    <!--Radio-napit-->
+      <div class = "form-check">
+          <label class="form-check-label" for = "opiskeluajankohta">Opiskelen tehokkaimmin tähän aikaan päivästä:</label><br />
+          <input type="radio" name="opiskeluajankohta" [(ngModel)]= "kayttaja.milloinVain" class="form-check-input" > Mihin aikaan vain<br />
+          <input type="radio" name="opiskeluajankohta" [(ngModel)]= "kayttaja.aamupaiva" class="form-check-input" > Aamupäivä<br />
+          <input type="radio" name="opiskeluajankohta" [(ngModel)]= "kayttaja.iltapaiva" class="form-check-input" > Iltapäivä<br />
       </div>
 
-      <button class="tallennusnappi" type="submit">Tallenna</button>
+<!--Tallennusnappi-->
+      <button class="tallennusnappi" type="submit" value="Submit">Tallenna</button>
     </form>
-  </body>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>  </body>
 </html>
-    <!--
-    <h2>Opintojen tiedot</h2>
-    Opintojen aloitus päivämäärä
-    <div class = "asetus-kyselyt">
-        <label for = "aloitusPaiva">Opintojen aloituspäivä</label><br />
-        <input id = "aloitusPaiva" name = "aloitusPaiva"  type = "date" class = "asetus-kohta"><br />
-
-    Opintojen laajuus opintopisteinä
-        <label for = "kokonaisOp">Opintojen laajuus opintopisteitä</label><br />
-        <input id = "kokonaisOp" name = "kokonaisOp"  type = "number" min="0" class = "asetus-kohta"><br />
-
-    Ryhmätunnus
-        <label for = "ryhmatunnus">Ryhmätunnus</label><br />
-        <input id = "ryhmatunnus" name = "ryhmatunnus"  type = "text" class = "asetus-kohta"><br />
-
-    Kiinnostus aloitusryhmän yhteisiin opiskelutuokioihin
-        <label for="yhteisetTuokiot">Olen kiinnostunut osallistumaan mahdollisiin ryhmäni opiskelutuokioihin</label><br /> 
-        <input class = "asetus-kohta" type="checkbox" name="yhteisetTuokiot" formControlName =yhteisetTuokiot> Kyllä<br />
-    </div>
-
-    <h2>Sovelluksen asetukset</h2>
-    <div class = "asetus-kyselyt">
-    Näkyvätkö pöllöt vai ei
-    <p>Haluan nähdä pöllöt sovelluksessani:</p>
-        <label class="kytkin">
-          <input type="checkbox">
-          <span class="slider round"></span>
-        </label><br />
-
-    <p>Mistä teemoista haluan henkipöllön kertovan minulle: </p>
-    Henkipöllön herkkyys
-    <label class="henkipolloherkkyys">Opinnot
-      <input type="checkbox" checked="checked">
-      <span class="neliomerkki"></span>
-    </label><br />
-    
-    <label class="henkipolloherkkyys">Elämänhallinta
-      <input type="checkbox" checked="checked">
-      <span class="neliomerkki"></span>
-    </label><br />
-    
-    <label class="henkipolloherkkyys">Valistus
-      <input type="checkbox" checked="checked">
-      <span class="neliomerkki"></span>
-    </label><br />
-
-
-    Onko opiskelijalle väliä mihin aikaan päivää henkipöllö ehdottelee opiskeluaikaa
-    <p>Minulle paras aika opiskella on: </p>
-    <form [formGroup]="asetustiedot" (ngSubmit)="onSubmit()"></form>
-      <div>
-         <input id="aamu" type="radio" class="opiskeluajankohta" value="aamu" name="opiskeluajankohta" formControlName="opiskeluajankohta">
-         <label class="opiskeluajankohta" for="aamu">Aamupäivä</label>
-      </div>
-   
-      <div>
-         <input id="ilta" type="radio" class="opiskeluajankohta" value="ilta" name="opiskeluajankohta" formControlName="opiskeluajankohta">
-         <label class="opiskeluajankohta" for="ilta">Iltapäivä</label>
-      </div>
-
-      <div>
-        <input id="eiValia" type="radio" class="opiskeluajankohta" value="eiValia" name="opiskeluajankohta" formControlName="opiskeluajankohta" checked="checked">
-        <label class="opiskeluajankohta" for="eiValia" >Ei väliä</label>
-     </div>
-   
-      <div *ngIf="isSubmitted && myForm.invalid">
-      </div>
-   
-      Submit Button 
-      <button type="submit">Tallenna</button>
-   </form>
-
-
-    <label class="opiskeluajankohta">Aamu
-      <input type="radio">
-      <span class="ympyramerkki"></span>
-    </label>
-        
-    <label class="opiskeluajankohta">Ilta
-      <input type="radio">
-      <span class="ympyramerkki"></span>
-    </label>
-        
-    <label class="opiskeluajankohta">Ei väliä
-      <input type="radio" checked="checked">
-      <span class="ympyramerkki"></span>
-    </label><br />
-
-    <button class="tallennusnappi" type="submit">Tallenna</button>
-  </div>-->
