--- a/Lintukoto-sovellus/src/app/kalenteri/kalenteri.component.html
+++ b/Lintukoto-sovellus/src/app/kalenteri/kalenteri.component.html
@@ -1,6 +1,7 @@
 <div id="schedule">
   <ejs-schedule
     #scheduleObj
+    [showTimeIndicator]="showTimeIndicator"
     width="100%"
     locale="fi"
     height="450px"
@@ -54,4 +55,3 @@
     </ejs-grid>
   </div>
 </div>
-
