--- a/Lintukoto-sovellus/src/app/kalenteri/kalenteri.component.css
+++ b/Lintukoto-sovellus/src/app/kalenteri/kalenteri.component.css
@@ -1,18 +1,19 @@
 .outer-div {
   align-content: center;
-  width: 100vw;
+  width: 80vw;
 }
 .blue-div {
-  background-color: #d4e4ff;
-  max-width: 90%;
-  height: 200px;
-  margin-bottom: 3em;
+  max-width: 100%;
+  height: 300px;
 }
 h2 {
   margin-left: 10px;
   margin-top: 10px;
 }
 
+#schedule {
+  width: 100%;
+}
 .e-appointment-details {
   box-sizing: border-box;
   width: 120em;
@@ -29,9 +30,23 @@ h2 {
 .e-hide {
   display: none;
 }
-/* tästä polusta löytyy värejä
+.e-dlg-header {
+  display: none;
+}
+/* näistä poluista löytyy värejä
 http: ; //localhost:4200/node_modules/@syncfusion/ej2-navigations/styles/material.css
+\Lintukoto-sovellus\node_modules\@syncfusion\ej2-angular-grids\styles\material.css
+
 .e-toolbar .e-toolbar-items {
     background: #d4e4ff;
 }
 */
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
