--- a/Lintukoto-sovellus/src/styles.css
+++ b/Lintukoto-sovellus/src/styles.css
@@ -8,3 +8,6 @@
 @import "../node_modules/@syncfusion/ej2-popups/styles/material.css";
 @import "../node_modules/@syncfusion/ej2-navigations/styles/material.css";
 @import "../node_modules/@syncfusion/ej2-angular-schedule/styles/material.css";
+
+@import "../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css";
+@import "../node_modules/@syncfusion/ej2-angular-grids/styles/material.css";
