lisätty guard joka päästää sivuille vain kirjautuneen käyttäjän

--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
@@ -1,7 +1,8 @@
 <h1>Lintukoto</h1>
 <div>
     <p>
-        Lintukoto on opiskelijoiden ajanhallintaa helpottava sovellus.
+      Lintukoto on opiskelijoiden ajanhallintaa helpottava sovellus.<br />
+      Pääset sovellukseen kirjautumalla henkilökohtaisella käyttäjätunnuksella ja salasanalla.
     </p>
 </div>
 
