Lisätty logo kirjautumissivulle ja muokattu sivuasettelua

--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
@@ -1,4 +1,17 @@
-div, h1 {
-    width: 500px;
-    margin: 50px;
-  }
+h1 {
+  margin: 50px;
+}
+div {
+  width: 500px;
+  margin: 50px;
+  float: left;
+  padding: 1em;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  float: right;
+  margin-left: 200px;
+  padding: 1em;
+}
