--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
@@ -4,6 +4,7 @@
       Lintukoto on opiskelijoiden ajanhallintaa helpottava sovellus.<br />
       Pääset sovellukseen kirjautumalla henkilökohtaisella käyttäjätunnuksella ja salasanalla.
     </p>
+    <img src="../../assets/images/LOGO_ilman_taustaa.png" id="lintukoto_logo" >
 </div>
 
 <div class="login">
