--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
@@ -3,15 +3,21 @@ h1 {
 }
 div {
   width: 500px;
-  margin: 50px;
+  margin: 10px;
   float: left;
   padding: 1em;
 }
 
-img {
+.login {
   max-width: 100%;
   height: auto;
   float: right;
-  margin-left: 200px;
+  padding: 1em;
+  margin-right: 20%;
+}
+
+img {
+  width: 60%;
+  height: auto;
   padding: 1em;
 }
