git ignore lisätty

--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
@@ -26,3 +26,9 @@
 .close {
   outline: hidden;
 }
+#uusi-kurssi {
+  position: absolute;
+  right: 50%;
+  transform: translate(-50, -50);
+  margin-bottom: 10px;
+}
