--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -74,5 +74,8 @@
         </div>
       </li>
     </ul>
+    <button id="uusi-kurssi" class=" btn btn-secondary" (click)="lisaaKurssi()">
+      Lisää uusi kurssi
+    </button>
   </body>
 </html>
