--- a/Lintukoto-sovellus/src/app/kalenteri/kalenteri.component.html
+++ b/Lintukoto-sovellus/src/app/kalenteri/kalenteri.component.html
@@ -26,7 +26,7 @@
 </div>
 <!--<h2 class="unselectable">Tehtävät</h2>-->
 
-<div class="blue-div unselectable">
+<div class="tehtavat-div unselectable">
   <ejs-grid
     id="Grid"
     #gridObj
@@ -47,7 +47,7 @@
     <e-columns>
       <e-column
         field="Id"
-        IsPrimaryKey="primaryKeyVal"
+        IsPrimaryKey="true"
         width="30"
         headerText="ID"
       ></e-column>
