--- a/Lintukoto-sovellus/src/app/kalenteri/kalenteri.component.css
+++ b/Lintukoto-sovellus/src/app/kalenteri/kalenteri.component.css
@@ -1,10 +1,6 @@
-.outer-div {
-  align-content: center;
-  width: 80vw;
-}
-.blue-div {
+.tehtavat-div {
   max-width: 100%;
-  height: 300px;
+  height: 220px;
 }
 h2 {
   margin-left: 10px;
