Kommentteja lisätty koodiin

--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
@@ -7,6 +7,7 @@
     <img src="../../assets/images/LOGO_ilman_taustaa.png" id="lintukoto_logo" >
 </div>
 
+<!--Sisäänkirjautumisen lomake-->
 <div class="login">
     <h2 class="login-header">Kirjaudu sisään</h2>
     <form [formGroup]="userData" class="login-container" (ngSubmit)="onSubmit(userData.value)">
