--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
@@ -1,13 +1,15 @@
 h1 {
   margin: 50px;
 }
+
+/* tekstikentän muotoilut*/
 div {
   width: 500px;
   margin: 10px;
   float: left;
   padding: 1em;
 }
-
+/* sisäänkirjautumislomakkeen muotoilut*/
 .login {
   max-width: 100%;
   height: auto;
@@ -16,6 +18,7 @@ div {
   margin-right: 20%;
 }
 
+/* kuvan muotoilut*/
 img {
   width: 60%;
   height: auto;
