--- a/Lintukoto-sovellus/src/styles.css
+++ b/Lintukoto-sovellus/src/styles.css
@@ -11,3 +11,7 @@
 
 @import "../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css";
 @import "../node_modules/@syncfusion/ej2-angular-grids/styles/material.css";
+
+.body {
+  height: 100vh;
+}
